--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,12 @@ dependencies:
   dio: ^5.1.1
   dartz: ^0.10.1
   flutter_bloc: ^8.1.2
+  get_it: ^7.3.0
+  animate_do: ^3.0.2
+  cached_network_image: ^3.2.1
+  carousel_slider: ^4.2.1
+  google_fonts: ^4.0.4
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
